# e384_rust

./: Cargo.toml  README.md  build.rs
examples/: basic_acquisition.rs
src/: board_model.rs  channel_model.rs  device.rs  device_acquisition.rs  device_calibration.rs  device_channel_cmd.rs  device_compensation.rs  device_convert.rs  device_custom.rs  device_info.rs  device_protocol.rs  device_ranges.rs  error_codes.rs  lib.rs  r_message_dispatcher.rs  util.rs
