[package]
name = "e384_rust"
version = "0.1.0"
edition = "2024"
include = [
    "src/**",
    "build.rs",
    "Cargo.toml",
    "README.md",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
bindgen = "0.71.0"
